<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2" 
  	tools:context="${relativePackage}.${activityClass}">

    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_match_id" />

    <TextView
		android:id="@+id/activity_detail_match_textView_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_match_id_activity" />

    <TextView
		android:id="@+id/activity_detail_match_textView_id_activity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_match_description" />

    <TextView
		android:id="@+id/activity_detail_match_textView_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_match_score_team_1" />

    <TextView
		android:id="@+id/activity_detail_match_textView_score_team_1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_match_score_team_2" />

    <TextView
		android:id="@+id/activity_detail_match_textView_score_team_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_match_datetime" />

    <TextView
		android:id="@+id/activity_detail_match_textView_datetime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
</GridLayout>