<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2" 
  	tools:context="${relativePackage}.${activityClass}">

    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_player_id" />

    <TextView
		android:id="@+id/activity_detail_player_textView_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_player_name" />

    <TextView
		android:id="@+id/activity_detail_player_textView_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_player_firstname" />

    <TextView
		android:id="@+id/activity_detail_player_textView_firstname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_player_comment" />

    <TextView
		android:id="@+id/activity_detail_player_textView_comment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_player_picture" />

    <TextView
		android:id="@+id/activity_detail_player_textView_picture"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
</GridLayout>