<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2" 
  	tools:context="${relativePackage}.${activityClass}">

    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_playersmatch_id" />

    <TextView
		android:id="@+id/activity_detail_playersmatch_textView_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_playersmatch_id_player" />

    <TextView
		android:id="@+id/activity_detail_playersmatch_textView_id_player"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_playersmatch_id_match" />

    <TextView
		android:id="@+id/activity_detail_playersmatch_textView_id_match"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
    <TextView
        style="@style/DetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/detail_playersmatch_team" />

    <TextView
		android:id="@+id/activity_detail_playersmatch_textView_team"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal" />
</GridLayout>